--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     ".gitignore",
     "index.html",
     "package.json",
-    "rspack.config.js",
+    "rspack.config.ts",
     "tsconfig.json"
   ],
   "dependencies": {
@@ -29,18 +29,23 @@
     "@flowgram.ai/minimap-plugin": "0.1.13"
   },
   "devDependencies": {
-    "@rspack/cli": "0.2.1",
+    "@flowgram.ai/eslint-config": "0.1.13",
+    "@flowgram.ai/ts-config": "0.1.13",
     "@types/lodash-es": "^4.17.12",
-    "@types/node": "^18",
+    "@types/node": "^18.19.80",
+    "@types/styled-components": "^5.1.34",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint": "^8.57.1",
+    "less": "^4.2.2",
+    "less-loader": "^6.2.0",
+    "@rspack/cli": "^1.2.8",
+    "@rspack/core": "^1.2.8",
+    "@rspack/plugin-react-refresh": "^1.0.1",
     "@types/react": "^18",
     "@types/react-dom": "^18",
-    "@types/styled-components": "^5",
-    "@typescript-eslint/parser": "^6.10.0",
-    "eslint": "^8.54.0",
-    "less": "^4.1.2",
-    "less-loader": "^6",
-    "@flowgram.ai/ts-config": "0.1.13",
-    "@flowgram.ai/eslint-config": "0.1.13"
+    "react-refresh": "^0.16.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3"
   },
   "publishConfig": {
     "access": "public",
